--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -3,28 +3,13 @@
 }
 .colapsable_form {
   display: flex;
-  margin: 10px 20px 0;
-  border-top: 1px solid #d8d8d8;
-  justify-content: space-between;
-  & .left {
-    padding-top: 10px;
-    display: flex;
-  }
-  & .fa__form {
-    color: $color-icons;
-    font-size: 18px;
-    margin-right: 6px;
-  }
-  & .form__colap--h2 {
-    font-family: $font-second;
-    font-size: 18px;
-    text-transform: uppercase;
-    color:$color-cards-text;
-  }
-  & .fa-angle-up{
-    padding-top: 10px;
-    color: $color-cards-text;
-    font-size: 18px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid $color-line;
+  margin: 0 20px 0 20px;
+  @media all and (min-width: 768px) {
+    margin: 0;
   }
 }
 
